# analytics_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
analytics_project/: asgi.py  settings.py  urls.py  wsgi.py
frontend-src/: index.html  package-lock.json  package.json  vite.config.js
frontend-src/src/: App.jsx  Table.jsx  index.jsx
frontend-src/src/charts/: DiscountVsRating.jsx  PriceHistogram.jsx
products/: admin.py  models.py  tests.py  views.py
products/management/commands/: parse_wb_async.py
products/migrations/: 0001_initial.py
products/templates/products/: index.html
static/frontend/: index.html
static/frontend/assets/: index-BmezGHW1.js  index-Dg9OSsEF.css
